--- a/dark/catppuccin/theme.scss
+++ b/dark/catppuccin/theme.scss
@@ -38,21 +38,71 @@ $white: #d9e0ee;
 /*                        Standard Variables                        */
 /*------------------------------------------------------------------*/
 
+// Pimrary colors
+$red: $red;
 $blue: $blue;
-$indigo: #6610f2;
-$purple: #6f42c1;
-$pink: #d63384;
-$red: #dc3545;
-$orange: #fd7e14;
-$yellow: #ffc107;
-$green: #198754;
-$teal: #20c997;
-$cyan: #0dcaf0;
+$green: $green;
 
-/*------------------------------------------------------------------*/
-/*                            Utilities                             */
-/*------------------------------------------------------------------*/
+// Secondary colors
+$yellow: $yellow;
+$cyan: $teal;
+$magenta: $mauve;
 
-/*------------------------------------------------------------------*/
-/*                               Maps                               */
-/*------------------------------------------------------------------*/
+// Terceary colors
+$pink: $pink;
+$violet: $lavender;
+$azure: $sky;
+$aquamarine: $teal;
+$chartreuse: $green;
+$orange: $peach;
+
+// Black White Gray
+$black: $black0;
+$white: $white;
+$gray-1: $gray0;
+$gray-2: $gray1;
+$gray-3: $gray2;
+
+$standard-variables: (
+  "red": $red,
+  "blue": $blue,
+  "green": $green,
+  "yellow": $yellow,
+  "cyan": $teal,
+  "magenta": $mauve,
+  "pink": $pink,
+  "violet": $lavender,
+  "azure": $sky,
+  "aquamarine": $teal,
+  "chartreuse": $green,
+  "orange": $peach,
+  "black": $black0,
+  "white": $white,
+  "gray-1": $gray0,
+  "gray-2": $gray1,
+  "gray-3": $gray2,
+);
+
+/*----------------------------------------------------------------------------*/
+/*                             Semantic Variables                             */
+/*----------------------------------------------------------------------------*/
+
+$primary: $blue;
+$secondary: $gray-1;
+$success: $green;
+$info: $cyan;
+$warning: $yellow;
+$danger: $red;
+$light: $white;
+$dark: $black;
+
+$semantic-variables: (
+  "primary": $primary,
+  "secondary": $secondary,
+  "success": $success,
+  "info": $info,
+  "warning": $warning,
+  "danger": $danger,
+  "light": $light,
+  "dark": $dark,
+);
